using UnityEngine;

namespace Assets.scripts.grammar
{
    [CreateAssetMenu(fileName = "newTerminal", menuName = "Grammar/New Terminal")]
    public class Terminal: Symbol
    {
        
        
    }
}